--- a/assets/dragonwell.css
+++ b/assets/dragonwell.css
@@ -79,10 +79,10 @@ ul  {
        "logo . . . . . . . . nav nav nav"
         "ban ban ban . case case case case . . . ."
         "ban ban ban . dlogo dlogo dlogo dlogo . . . ."
-        "ban ban ban csnav csnav csnav csnav csnav csnav . . ."
+        ". csnav csnav csnav csnav csnav csnav csnav csnav csnav csnav ."
         ". . . position position position position position position . . ."
         ". . . . resume resume resume resume . . . ."
-        ". chal chal chal chal . . sol sol sol sol ."
+        "chal chal chal chal chal chal sol sol sol sol sol sol"
         "chalp chalp chalp chalp chalp chalp solp solp solp solp solp solp"
         ". . . . prot prot prot prot . . . ."
         "home2 home2 home2 home2 coffee1 coffee1 coffee1 coffee1 ethi ethi ethi ethi" 
@@ -96,7 +96,7 @@ ul  {
         "flow3 flow3 flow3 flow3 flow3 flow3 flow2 flow2 flow2 flow2 flow2 flow2"
         ". . bran bran bran bran bran bran bran bran . ."
         ". . branp branp branp branp branp branp branp branp . ."
-        ". . . tsk1 tsk1 tsk1 tsk2 tsk2 tsk2 . . ."
+        ". . tsk1 tsk1 tsk1 tsk1 tsk2 tsk2 tsk2 tsk2 . ."
         ". . branp2 branp2 branp2 branp2 branp2 branp2 branp2 branp2 . ."
         ". colors colors colors colors colors colors clogos clogos clogos clogos . "
         ". clogo clogo clogo clogo clogo clogo clogos clogos clogos clogos ."
@@ -113,6 +113,8 @@ ul  {
         "footnav footnav footnav contact contact contact contact contact contact . . footlogo"
         
 }
+
+
 
 
 .case {
@@ -178,6 +180,22 @@ ul  {
     border-bottom: 3px solid #405824;
     
 }
+
+
+.sticky {
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    text-align: center;
+    background: white;
+    margin: 0 0 0 -100px;
+    padding: 17px 0px 20px;
+    opacity: .95;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+}
+
+
+
 
 
 
@@ -631,7 +649,7 @@ ul  {
 
 
 
-@media (max-width: 825px) {
+@media (max-width: 1200px) {
     
      
     
@@ -660,7 +678,7 @@ ul  {
         "flow3 flow3 flow3 flow3 flow3 flow3 flow2 flow2 flow2 flow2 flow2 flow2"
         ". . bran bran bran bran bran bran bran bran . ."
         ". branp branp branp branp branp branp branp branp branp branp ."
-        ". . . tsk1 tsk1 tsk1 tsk2 tsk2 tsk2 . . ."
+        ". tsk1 tsk1 tsk1 tsk1 tsk1 tsk2 tsk2 tsk2 tsk2 tsk2 ."
         ". branp2 branp2 branp2 branp2 branp2 branp2 branp2 branp2 branp2 branp2 ."
         ". colors colors colors colors colors colors clogos clogos clogos clogos . "
         ". clogo clogo clogo clogo clogo clogo clogos clogos clogos clogos ."
@@ -677,6 +695,10 @@ ul  {
         "footnav footnav footnav contact contact contact contact contact contact . . footlogo"
     
      }
+    
+        .sticky {
+        margin-left: -50px;
+    }
     
   
     .logo img {
@@ -795,10 +817,10 @@ ul  {
         "ban ban ban . case case case case . . . ."
         "ban ban ban dlogo dlogo dlogo dlogo dlogo dlogo . . ."
         "ban ban ban . . . . . . . . ."
-        ". csnav csnav csnav csnav csnav csnav csnav csnav csnav csnav ."
-        ". . . position position position position position position . . ."
+        "csnav csnav csnav csnav csnav csnav csnav csnav csnav csnav csnav csnav"
+        ". . position position position position position position position position . ."
         ". . resume resume resume resume resume resume resume resume . ."
-        ". chal chal chal chal . . sol sol sol sol ."
+        "chal chal chal chal chal chal sol sol sol sol sol sol"
         "chalp chalp chalp chalp chalp chalp solp solp solp solp solp solp"
         ". . prot prot prot prot prot prot prot prot . ."
         "home2 home2 home2 home2 coffee1 coffee1 coffee1 coffee1 ethi ethi ethi ethi" 
@@ -812,7 +834,7 @@ ul  {
         "flow3 flow3 flow3 flow3 flow3 flow3 flow2 flow2 flow2 flow2 flow2 flow2"
         ". . bran bran bran bran bran bran bran bran . ."
         ". branp branp branp branp branp branp branp branp branp branp ."
-        ". . . tsk1 tsk1 tsk1 tsk2 tsk2 tsk2 . . ."
+        ". tsk1 tsk1 tsk1 tsk1 tsk1 tsk2 tsk2 tsk2 tsk2 tsk2 ."
         ". branp2 branp2 branp2 branp2 branp2 branp2 branp2 branp2 branp2 branp2 ."
         ". colors colors colors colors colors colors clogos clogos clogos clogos . "
         ". clogo clogo clogo clogo clogo clogo clogos clogos clogos clogos ."
@@ -830,7 +852,7 @@ ul  {
     
      }
     
-    
+
 }
 
 
