Fixed sticky nav width in safari/chrome mobile

--- a/assets/orion.css
+++ b/assets/orion.css
@@ -110,6 +110,7 @@ ul  {
         ". . conc conc conc conc conc conc conc conc . ."
         ". . concp concp concp concp concp concp concp concp . ."
         ". . . . prot2 prot2 prot2 prot2 . . . ."
+        ". . . . back back back back . . . ."
         "footnav footnav footnav contact contact contact contact contact contact . . footlogo"
         
 }
@@ -159,7 +160,7 @@ ul  {
     font-size: 18px;
 }
 
-.csnav li span {
+.csnav li span, .back span {
     padding-bottom: 3px;
     border-bottom: 3px solid transparent;
     transition: border .2s cubic-bezier(1, 0.04, 1, 1);
@@ -167,13 +168,13 @@ ul  {
 }
 
 
-.csnav li span:hover {
+.csnav li span:hover, .back span:hover {
     padding-bottom: 3px;
     border-bottom: 3px solid #001B4C;
     
 }
 
-.csnav li span:active {
+.csnav li span:active, .back span:active {
     padding-bottom: 3px;
     border-bottom: 3px solid #001B4C;
     
@@ -534,9 +535,18 @@ ul  {
 
 .prot2 {
     grid-area: prot2;
-    margin-bottom: 150px;
+    margin-bottom: 70px;
 }
 
+.back {
+    grid-area: back;
+    text-align: center;
+    font-weight: bold;
+    color: #405824;
+    cursor: pointer;
+    font-weight: bold;
+    margin-bottom: 170px;
+}
 
 
 
@@ -674,6 +684,7 @@ ul  {
         ". . conc conc conc conc conc conc conc conc . ."
         ". concp concp concp concp concp concp concp concp concp concp ."
         ". . prot2 prot2 prot2 prot2 prot2 prot2 prot2 prot2 . ."
+         ". . . . back back back back . . . ."  
         "footnav footnav footnav contact contact contact contact contact contact . . footlogo"
     
      }
@@ -826,6 +837,7 @@ ul  {
         ". . conc conc conc conc conc conc conc conc . ."
         ". concp concp concp concp concp concp concp concp concp concp ."
         ". . prot2 prot2 prot2 prot2 prot2 prot2 prot2 prot2 . ."
+        ". . . . back back back back . . . ."  
         "footnav footnav footnav contact contact contact contact contact contact contact . footlogo"
     
      }
@@ -890,7 +902,8 @@ ul  {
         "utest utest utest utest utest utest"
         "conc conc conc conc conc conc"
         "concp concp concp concp concp concp"
-        "prot2 prot2 prot2 prot2 prot2 prot2"  
+        "prot2 prot2 prot2 prot2 prot2 prot2" 
+        "back back back back back back"
         "contact contact contact contact contact contact"
         ". . footlogo footlogo . ."
     
@@ -1016,6 +1029,10 @@ ul  {
         
     }
     
+    .back {
+        margin-bottom: 50px;
+    
+    }
     
     .footnav {
         display: none;
