--- a/assets/dragonwell.css
+++ b/assets/dragonwell.css
@@ -187,7 +187,7 @@ ul  {
     position: fixed;
     top: -60px;
     left: 0px;
-    width: 100%;
+    width: 100vw;
     text-align: center;
     background: white;
     padding: 17px 0px 20px;
