--- a/assets/orion.css
+++ b/assets/orion.css
@@ -542,7 +542,7 @@ ul  {
     grid-area: back;
     text-align: center;
     font-weight: bold;
-    color: #405824;
+    color: #001b4c;
     cursor: pointer;
     font-weight: bold;
     margin-bottom: 170px;
